components/cell/io.cellery.security.cell.sts.server/src/main/resources/sidecar-interception.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: employee--envoyfilter
spec:
  workloadLabels:
    # We filter the pods to apply this filter based on cell name. We expect the Pods within a cell to have this label.
    mesh.cellery.io/cell: employee
  filters:
  - insertPosition:
      index: FIRST
    listenerMatch:
      # Intercepting all HTTP traffic within the cell.
      listenerType: SIDECAR_INBOUND
      listenerProtocol: HTTP
    filterType: HTTP
    filterName: "envoy.ext_authz"
    filterConfig:
      grpc_service:
        google_grpc:
          # Cell STS service which will intercept the outbound call and manipulate headers etc.
          target_uri: 192.168.99.1:8080
          stat_prefix: "ext_authz"
        timeout: 10s
  - insertPosition:
      index: LAST
    listenerMatch:
      # Intercepting all HTTP traffic going out of the cell.
      listenerType: SIDECAR_OUTBOUND
      listenerProtocol: HTTP
    filterType: HTTP
    filterName: "envoy.ext_authz"
    filterConfig:
      grpc_service:
        google_grpc:
          # Cell STS service which will intercept the outbound call and manipulate headers etc.
          target_uri: 192.168.99.1:8081
          stat_prefix: "ext_authz"
        timeout: 10s
